# OLSystem

./: .gitignore  README.md  build  build.bat  build.sh  clean  clean.bat  deploy.sh  languages  languages.sh  pom.xml
Database/: DATABASE.md  README.md  database.sql  database_import.sql
GUI/: README.md
GUI/admin-room-page/: admin-room.css  admin-room.html  admin-room.js  package-lock.json
GUI/admin-room-page/components/: Information.vue  Results.vue  Tasks.vue  TestData.vue  Users.vue
GUI/end_olympiad-page/: end-olympiad.html  end-olympiad.js
GUI/olympiad-page/: olympiad.css  olympiad.html  olympiad.js
GUI/start-olympiad-page/: start-olympiad.html  start-olympiad.js
OLSystem/: pom.xml
OLSystem/src/main/resources/: administrator.properties  data.properties
OLSystem/src/main/webapp/admin-room-page/: admin-room.html  admin-room.js  package-lock.json  package.json  webpack.config.js
OLSystem/src/main/webapp/admin-room-page/components/: Information.vue  Settings.vue  Tasks.vue  TestData.vue
OLSystem/src/main/webapp/end-olympiad-page/: page.html  script.js
OLSystem/src/main/webapp/olympiad-page/: page.html
OLSystem/src/main/webapp/start-olympiad-page/: page.html  script.js  style.css
ProgChecker/: CMakeLists.txt  README.md
ProgChecker/Sources/: CMakeLists.txt  main.cpp
ProgChecker/Sources/Checking/: EResultsChecking.h  Languages.cpp  Languages.h  Program.cpp  Program.h  Terminal.cpp  Terminal.h
ProgChecker/Sources/Checking/Compilers/: CCompiler.cpp  CCompiler.h  CppCompiler.cpp  CppCompiler.h  ICompiler.h
ProgChecker/Sources/Data/Accesses/: FileSystem.cpp  FileSystem.h  JsonUtil.cpp  JsonUtil.h
ProgChecker/Sources/Data/Entity/: Task.cpp  Task.h  TestData.cpp  TestData.h
ProgChecker/Sources/DataObjects/: Task.cpp  Task.h  TestData.cpp  TestData.h
ProgChecker/Sources/Exceptions/: IException.h  IOException.h  NetworkException.h  SystemCheckingException.h
ProgChecker/Sources/Exceptions/Network/: BadRequestException.h  NetworkException.h
ProgChecker/Sources/Exceptions/SystemChecking/: NonExistLanguageException.h  NonExistProgramException.h  SystemCheckingException.h
ProgChecker/Sources/Network/: Client.cpp  Client.h  IServer.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h
ProgChecker/Sources/Objects/: Task.cpp  Task.h  TestData.cpp
ProgChecker/Sources/Resources/: NetworkConfig.xml  TutorialRunningProgram.txt
ProgChecker/Sources/SystemChecking/: EResultChecking.h  ISystem.h  System.cpp  System.h
ProgChecker/Sources/SystemChecking/Programs/: CreatorPrograms.cpp  CreatorPrograms.h  IProgram.h
ProgChecker/Sources/SystemChecking/Programs/Compilers/: CppC.cpp  CppC.h  ICompiler.h  Java.cpp  Java.h
ProgChecker/Sources/SystemChecking/Programs/Interpreters/: IInterpreter.h  Python.cpp  Python.h
ProgChecker/Sources/Utils/: FileSystem.cpp  FileSystem.h  JsonUtil.cpp  JsonUtil.h  Logger.h  Server.h  Terminal.cpp  Terminal.h
ProgChecker/Tests/: CMakeLists.txt  TestCompilerC.cpp  TestCompilerCpp.cpp  TestTerminal.cpp
db/: TestingSystem_basic_data.sql  TestingSystem_groups.sql  TestingSystem_questions.sql  TestingSystem_results_olympiad.sql  TestingSystem_results_test.sql  TestingSystem_test_data_questions.sql  TestingSystem_users.sql
examples/admin-room-page/: admin-room.html  package.json
examples/admin-room-page/components/: Settings.vue
examples/end_olympiad-page/: end-olympiad.html
examples/olympiad-page/: olympiad.js
examples/start-olympiad-page/: start-olympiad.css  start-olympiad.html  start-olympiad.js
src/: pom.xml
src/main/java/ru/tidstu/testingsystem/: Test.java
src/main/java/ru/tidstu/testingsystem/authentication/: AuethentificationImpl.java  Authentification.java  AuthentificationImpl.java  SignIn.java  SignUp.java
src/main/java/ru/tidstu/testingsystem/compilers/: Compiler.java  CompilerC.java  CompilerJava.java  ResultRunningProgram.java
src/main/java/ru/tidstu/testingsystem/controllers/: AdminRoomController.java  AuethentificationController.java  FinishTestController.java  IndexController.java  TasksController.java
src/main/java/ru/tidstu/testingsystem/dao/: BasicDataDAO.java  BasicDataDAOImpl.java  GroupsDAO.java  GroupsDAOImpl.java  QuestionsDAO.java  QuestionsDAOImpl.java  ResultsDAO.java  ResultsDAOImpl.java  TestDataDAO.java  TestDataDAOImpl.java  UsersDAO.java  UsersDAOImpl.java
src/main/java/ru/tidstu/testingsystem/data/: DataBase.java
src/main/java/ru/tidstu/testingsystem/domain/: Group.java  Question.java  Result.java  TestData.java  User.java
src/main/java/ru/tidstu/testingsystem/models/: FactoryModels.java  FirebirdDB.java  IOFile.java  Question.java  Singletons.java  User.java
src/main/java/ru/tidstu/testingsystem/olympiad/: PassingOlympiad.java
src/main/resources/: DB.FDB
src/main/resources/common_date/: title.txt
src/main/webapp/: admin_room.jsp  end_test.jsp  index.jsp  login.jsp  send_task.jsp  tasks.jsp
src/main/webapp/css/: bootstrap.min.css  login_css.css  style.css
src/main/webapp/js/: login.js  tasks.js  timer.js
src/main/webapp/resources/js/: auethentification-page.js
src/main/webapp/resources/js/admin_room/: questions.js  results.js
src/main/webapp/resources/libs/: bootstrap.min.css
src/main/webapp/templates/: header.jsp  nav_footer_main.jsp  nav_main.jsp
src/main/webapp/views/: admin_room.jsp  tasks.jsp
src/main/webapp/views/templates/: footer.jsp
src/src/main/resources/: DB.FDB  data.properties  programming-languages.properties  spring-context.xml
src/src/main/webapp/resources/css/: auethentification.css  styles.css
src/src/main/webapp/resources/js/: auethentification-page.js  preloader.js
src/src/main/webapp/views/: admin_room.jsp  auethentification.jsp  tasks.jsp
src/src/test/java/ru/testingsystem/: CompilerCTest.java  CompilerCppTest.java  CompilerJavaTest.java  InterpreterPythonTest.java  TerminalTest.java
src/test/java/ru.tidstu.testingsystem/: FirebirdDBTest.java
src/test/resources/sources/: README.txt
web/: style.css
web/pages/: signup.jsp  tasks.jsp
web/templates/: footer.jsp
(+289 files in other folders)
